// This file is auto-generated, DO NOT make any changes here
syntax = "proto3";
package de.rki.coronawarnapp.server.protocols.internal.pt;


import "internal/pt/check_in.proto";

message TraceWarningPackage {
  // hours since UNIX Epoch
  uint32 intervalNumber = 1;
  string region = 2;
  repeated TraceTimeIntervalWarning timeIntervalWarnings = 3;
}

message TraceTimeIntervalWarning {
  bytes locationGuid = 1; // 16 byte random string
  // 10-minute intervals since UNIX Epoch
  uint32 startIntervalNumber = 2;
  // 10-minute intervals since UNIX Epoch
  uint32 endIntervalNumber = 3;
  uint32 transmissionRiskLevel = 4;
}